--- a/about.html
+++ b/about.html
@@ -18,22 +18,19 @@
           <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a class="nav-link active" href="about.html">About</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Projects</a>
+                <a class="nav-link active" href="projects.html">Projects</a>
               </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Contact</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+              <li class="nav-item active">
+                <a class="nav-link" href="contact.html">Contact</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
-    <div class= "container2" >
+    <div class= "container1" >
         <h1 class="header">About me</h1>
         <hr>
         <div class="col-md-9">
@@ -49,7 +46,7 @@
         <p class="text-muted text-muted-footer text-center">
           <div class="row">
             <div class="col-md-3">
-                <a href="www.linkedin.com/in/mia-camargo-356a80244">
+                <a href="https://www.linkedin.com/in/mia-camargo-356a80244">
                     <img src="assets/linkedin-with-circle.svg" width="40" height="40">
                 </a>
                 
