contact form actually fixed

--- a/contact.html
+++ b/contact.html
@@ -34,18 +34,21 @@
     <div class="container2">
         <h1 class="header">Contact</h1>
         <hr>
+        <form
+        action="https://formspree.io/f/mrbperon"
+        method="POST"
+      >
           <label>
             <h3>Email address:</h3>
-            <hr style="visibility: hidden;">
+            <hr style="border: none;">
             <input type="email" name="email">
           </label>
-          <hr style="visibility: hidden;">
+          <hr style="border: none;">
           <label>
-            <h3>Your message:</h3>
-            <hr style="visibility: hidden;">
+            <h3>Your message:</h3> <hr>
             <textarea name="message"></textarea>
           </label>
-          <hr style="visibility: hidden;">
+          <hr style="border: none;">
           <!-- your other form fields go here -->
           <button type="submit">Send</button>
         </form>
