some_aesthetic_changes

--- a/projects.html
+++ b/projects.html
@@ -34,11 +34,11 @@
         </div>
       </nav>
 
-      <div class="container2">
-        <h1>Projects:</h1>
+      <div class="container1">
+        <h1 class="header">Projects:</h1>
         <hr>
         <ul>
-          <li><h5>VPN homelab</h5></li>
+          <li><h5>VPN homelab (in progress)</h5></li>
         </ul>
       </div>
 
